--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 독 무효</div>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
 <div class="icon-line">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line">99턴 동안 방어력 감소 무효</div>
+<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line">10턴 동안 선원 봉쇄</div>
 <div class="icon-line">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
@@ -127,7 +127,7 @@
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 독 무효</div>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
 <div class="icon-line">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line">99턴 동안 방어력 감소 무효</div>
+<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line">12턴 동안 선원 봉쇄</div>
 <div class="icon-line">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
