--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 <span class="label-initial">초기 상태:</span><br>
 로저&레일리&가반<br>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 독 무효</div>
+<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
+<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line">10턴 동안 선원 봉쇄</div>
@@ -124,9 +124,9 @@
 <span class="label-initial">초기 상태:</span><br>
 로저&레일리&가반<br>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 독 무효</div>
+<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
+<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
 <div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line">12턴 동안 선원 봉쇄</div>
