--- a/index.html
+++ b/index.html
@@ -1,151 +1,16 @@
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <style>
-      body {
-        background-color: #13514d;
-        color: #f2f2f7;
-        font-family: sans-serif;
-        line-height: 1.5;
-        padding: 2em;
-      }
-      img {
-        height: 24px;
-        vertical-align: middle;
-        margin-right: 2px;
-      }
-      h2 {
-        border-bottom: 1px solid #f2f2f7;
-        padding-bottom: 0.3em;
-      }
-      .label-initial {
-        background-color: #267d4a;
-        color: #f2f2f7;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .label-preemptive {
-        background-color: #24567a;
-        color: #f2f2f7;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .icon-line {
-        display: flex;
-        align-items: center;
-        gap: 6px;
-        margin-bottom: 2px;
-      }
-    </style>
-  </head>
-  <body>
-<h2>Level: 1-59</h2>
-<h3>Stage 3:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">2턴 동안 상단 봉쇄</div>
-<br>
-<h3>Stage 4:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">2턴 동안 선원 봉쇄</div>
-<br>
-<h3>Stage 5:</h3>
-<span class="label-initial">초기 상태:</span><br>
-샬롯 링링<br>
-<div class="icon-line">약점 타입: 야심형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_damagecut_icon.png">2턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
-<br>
-<h2>Level: 60-79</h2>
-<h3>Stage 3:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">4턴 동안 상단 봉쇄</div>
-<br>
-<h3>Stage 4:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">4턴 동안 선원 봉쇄</div>
-<br>
-<h3>Stage 5:</h3>
-<span class="label-initial">초기 상태:</span><br>
-샬롯 링링<br>
-<div class="icon-line">약점 타입: 야심형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_251_skill.png">2턴 동안 5000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_damagecut_icon.png">3턴 동안 5000을(를) 넘는 데미지를 99% 감소</div>
-<br>
-<h2>Level: 80-99</h2>
-<h3>Stage 3:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">8턴 동안 상단 봉쇄</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 1회 제한</div>
-<div class="icon-line">8턴 동안 상단의 선장효과 무효</div>
-<br>
-<h3>Stage 4:</h3>
-<span class="label-initial">초기 상태:</span><br>
-로저&레일리&가반<br>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">10턴 동안 선원 봉쇄</div>
-<div class="icon-line">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_hungry.png">2개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 15% 감소, 공격력 90% 감소</div>
-<br>
-<h3>Stage 5:</h3>
-<span class="label-initial">초기 상태:</span><br>
-샬롯 링링<br>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_210.png">99턴 동안 적의 방어력 감소 이외의 상태이상 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_death_invalid.png">99턴 동안격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_ratio_damagedown.png">99턴 동안비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_damagecut_icon.png">9턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_deffence_up.png">6턴 동안 방어력 5000배</div>
-<div class="icon-line">3턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
-<div class="icon-line">약점 타입: 야심형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">8턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_251_skill.png">5턴 동안 13000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<br>
-<h2>Level: 100+</h2>
-<h3>Stage 3:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">9턴 동안 상단 봉쇄</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 1회 제한</div>
-<div class="icon-line">9턴 동안 상단의 선장효과 무효</div>
-<br>
-<h3>Stage 4:</h3>
-<span class="label-initial">초기 상태:</span><br>
-로저&레일리&가반<br>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">12턴 동안 선원 봉쇄</div>
-<div class="icon-line">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_hungry.png">3개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
-<br>
-<h3>Stage 5:</h3>
-<span class="label-initial">초기 상태:</span><br>
-샬롯 링링<br>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_210.png">적의 방어력 감소 이외의 상태이상 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_damagecut_icon.png">11턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_deffence_up.png">7턴 동안 방어력 10000배</div>
-<div class="icon-line">4턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
-<div class="icon-line">약점 타입: 야심형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line">10턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="https://hayaden.github.io/optc-gimmicks/img/common_icon_251_skill.png">5턴 동안 21500 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<br>
+<!DOCTYPE html><html><head><meta charset='UTF-8'>
+<title>기믹 목록</title>
+<style>
+body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; }
+a { color: #87cefa; font-weight: bold; text-decoration: none; }
+.entry { margin-bottom: 1em; }
+.id { font-weight: bold; color: gold; }
+.summary { color: #dddddd; font-size: 0.9em; margin-left: 1em; }
+</style></head><body>
+<h1>🚩 기믹 패턴 목록</h1><hr>
+<div class='entry'><a href='gimmicks_60164.html'><span class='id'>[유대 미호크&페로나 일반보스 속 속성]</span></a><span class='summary'> </span></div>
+<div class='entry'><a href='gimmicks_60165.html'><span class='id'>[유대 미호크&페로나 일반보스 기 속성]</span></a><span class='summary'> </span></div>
+<div class='entry'><a href='gimmicks_60166.html'><span class='id'>[유대 미호크&페로나 일반보스 기 속성]</span></a><span class='summary'> </span></div>
+<div class='entry'><a href='gimmicks_60167.html'><span class='id'>[유대 미호크&페로나 일반보스 심 속성]</span></a><span class='summary'> </span></div>
+<div class='entry'><a href='gimmicks_5000031.html'><span class='id'>[궤적 VS 빅맘 패턴]</span></a><span class='summary'> </span></div>
 </body></html>
