--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ a { color: #87cefa; font-weight: bold; text-decoration: none; }
 .summary { color: #dddddd; font-size: 0.9em; margin-left: 1em; }
 </style></head><body>
 <h1>🚩 기믹 패턴 목록</h1><hr>
-<div class='entry'><a href='gimmicks_60164.html'><span class='id'>[유대 미호크&페로나 일반보스 속 속성]</span></a><span class='summary'> </span></div>
-<div class='entry'><a href='gimmicks_60165.html'><span class='id'>[유대 미호크&페로나 일반보스 기 속성]</span></a><span class='summary'> </span></div>
-<div class='entry'><a href='gimmicks_60166.html'><span class='id'>[유대 미호크&페로나 초보스 기 속성]</span></a><span class='summary'> </span></div>
-<div class='entry'><a href='gimmicks_60167.html'><span class='id'>[유대 미호크&페로나 초보스 심 속성]</span></a><span class='summary'> </span></div>
+<div class='entry'><a href='gimmicks_5000029.html'><span class='id'>[궤적 VS 보니 패턴]</span></a><span class='summary'> </span></div>
+<div class='entry'><a href='gimmicks_5000030.html'><span class='id'>[궤적 VS 행콕 패턴]</span></a><span class='summary'> </span></div>
 <div class='entry'><a href='gimmicks_5000031.html'><span class='id'>[궤적 VS 빅맘 패턴]</span></a><span class='summary'> </span></div>
 </body></html>
