--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><head><meta charset='UTF-8'>
 <title>기믹 목록</title>
 <style>
-body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; }
-a { color: #87cefa; font-weight: bold; text-decoration: none; }
+body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 32px; }
+a { color: #87cefa; font-weight: bold; text-decoration: none; font-size: 32px; }
 .entry { margin-bottom: 1em; }
-.id { font-weight: bold; color: gold; }
-.summary { color: #dddddd; font-size: 0.9em; margin-left: 1em; }
+.id { font-weight: bold; color: gold; font-size: 32px; }
+.summary { color: #dddddd; font-size: 16px; margin-left: 1em; }
 </style></head><body>
-<h1>🚩 기믹 패턴 목록</h1><hr>
+<h1 style='font-size: 40px;'>🚩 기믹 패턴 목록</h1><hr>
 <div class='entry'><a href='gimmicks_5000029.html'><span class='id'>[궤적 VS 보니 패턴]</span></a><span class='summary'> </span></div>
 <div class='entry'><a href='gimmicks_5000030.html'><span class='id'>[궤적 VS 행콕 패턴]</span></a><span class='summary'> </span></div>
 <div class='entry'><a href='gimmicks_5000031.html'><span class='id'>[궤적 VS 빅맘 패턴]</span></a><span class='summary'> </span></div>
