--- a/gimmicks_5000031.html
+++ b/gimmicks_5000031.html
@@ -2,74 +2,41 @@
   <head>
     <meta charset="UTF-8">
     <style>
-      body {
-        background-color: #13514d;
-        color: #f2f2f7;
-        font-family: sans-serif;
-        line-height: 1.5;
-        padding: 2em;
-      }
-      img {
-        height: 24px;
-        vertical-align: middle;
-        margin-right: 2px;
-      }
-      h2 {
-        border-bottom: 1px solid #f2f2f7;
-        padding-bottom: 0.3em;
-      }
-      .label-initial {
-        background-color: #267d4a;
-        color: #f2f2f7;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .label-preemptive {
-        background-color: #24567a;
-        color: #f2f2f7;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .label-special {
-        background-color: #aa8500;
-        color: #fff;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .label-death {
-        background-color: #b71c1c;
-        color: #fff;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .label-interrupt {
-        background-color: #6a1b9a;
-        color: #fff;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-weight: bold;
-        display: inline-block;
-        margin-bottom: 4px;
-      }
-      .icon-line {
-        display: flex;
-        align-items: center;
-        gap: 6px;
-        margin-bottom: 2px;
-      }
-    </style>
+  body {
+    background-color: #13514d;
+    color: #f2f2f7;
+    font-family: sans-serif;
+    line-height: 1.7;
+    padding: 2em;
+    font-size: 24px; /* ✅ 추가 */
+  }
+  a {
+    font-size: 24px;
+  }
+  h2 {
+    border-bottom: 1px solid #f2f2f7;
+    padding-bottom: 0.3em;
+    font-size: 28px;  /* ✅ 추가 */
+  }
+  h3 {
+    font-size: 26px;  /* ✅ 추가 */
+    margin-top: 1em;
+  }
+  .icon-line {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 4px;
+    font-size: 23px;  /* ✅ 추가 */
+  }
+  .label-initial,
+  .label-preemptive,
+  .label-special,
+  .label-death,
+  .label-interrupt {
+    font-size: 22px;  /* ✅ 추가 */
+  }
+</style>
   </head>
   <body>
 <h2>Level: 1-59</h2>
