--- a/gimmicks_5000031.html
+++ b/gimmicks_5000031.html
@@ -1,55 +1,89 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      background-color: #13514d;
-      color: #f2f2f7;
-      font-family: sans-serif;
-      line-height: 1.8;
-      padding: 1.5em;
-      font-size: 26px; /* ✅ 본문 기본 폰트 크기 */
-    }
-    a {
-      font-size: 26px;
-    }
-    h2 {
-      border-bottom: 2px solid #f2f2f7;
-      padding-bottom: 0.4em;
-      font-size: 30px;  /* ✅ 레벨 제목 */
-      margin-top: 1.5em;
-    }
-    h3 {
-      font-size: 28px;  /* ✅ 스테이지 제목 */
-      margin-top: 1.2em;
-    }
-    .icon-line {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 6px;
-      font-size: 25px;  /* ✅ 텍스트 + 아이콘 줄 */
-    }
-    .label-initial,
-    .label-preemptive,
-    .label-special,
-    .label-death,
-    .label-interrupt {
-      font-size: 24px;
-      padding: 6px 14px;
-      border-radius: 999px;
-      font-weight: bold;
-      display: inline-block;
-      margin: 0.4em 0;
-    }
-    img {
-      height: 28px;
-      vertical-align: middle;
-    }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+<style>
+  body {
+    background-color: #13514d;
+    color: #f2f2f7;
+    font-family: sans-serif;
+    line-height: 1.7;
+    padding: 2em;
+    font-size: 26px;
+  }
+  img {
+    height: 40px;
+    vertical-align: middle;
+    margin-right: 2px;
+  }
+  h2 {
+    border-bottom: 1px solid #f2f2f7;
+    padding-bottom: 0.3em;
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 28px;
+    margin-top: 1em;
+  }
+  .icon-line {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 4px;
+    font-size: 24px;
+  }
+  .label-initial {
+    background-color: #267d4a;
+    color: #f2f2f7;
+    padding: 6px 12px;
+    border-radius: 999px;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 6px;
+    font-size: 24px;
+  }
+  .label-preemptive {
+    background-color: #24567a;
+    color: #f2f2f7;
+    padding: 6px 12px;
+    border-radius: 999px;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 6px;
+    font-size: 24px;
+  }
+  .label-special {
+    background-color: #aa8500;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 999px;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 6px;
+    font-size: 24px;
+  }
+  .label-death {
+    background-color: #b71c1c;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 999px;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 6px;
+    font-size: 24px;
+  }
+  .label-interrupt {
+    background-color: #6a1b9a;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 999px;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 6px;
+    font-size: 24px;
+  }
+</style>
+  </head>
+  <body>
 <h2>Level: 1-59</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
