--- a/KIZUNA_SUPERBOSS1.html
+++ b/KIZUNA_SUPERBOSS1.html
@@ -18,7 +18,7 @@
 </head>
 <body>
        <h1>VS 미호크&페로나</h1>
-       <div style="font-size: 22px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#4dff4d; font-weight:bold;">초보스</span> <span style="color:#4dff4d; font-weight:bold;">[기]</span></div>
+       <div style="font-size: 22px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#258325; font-weight:bold;">초보스</span> <span style="color:#258325; font-weight:bold;">[기]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 심 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
