--- a/KIZUNA_SUPERBOSS2.html
+++ b/KIZUNA_SUPERBOSS2.html
@@ -18,7 +18,7 @@
 </head>
 <body>
        <h1>VS 미호크&페로나</h1>
-       <div style="font-size: 22px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#ffff4d; font-weight:bold;">초보스</span> <span style="color:#ffff4d; font-weight:bold;">[심]</span></div>
+       <div style="font-size: 22px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#e79925; font-weight:bold;">초보스</span> <span style="color:#e79925; font-weight:bold;">[심]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_charge.png">참격형, 타격형, 강인형 캐릭터의 필살기 턴을 30턴 단축</div>
@@ -29,7 +29,7 @@
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">1턴 동안 <span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span> 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">1턴 동안 <span style="color:#ee0000; font-weight:bold;">[힘]</span><span style="color:#258325; font-weight:bold;">[기]</span><span style="color:#0329fd; font-weight:bold;">[속]</span><span style="color:#e79925; font-weight:bold;">[심]</span><span style="color:#7515A1; font-weight:bold;">[지]</span> 슬롯으로 공격했을 때 데미지 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_limit.png">1턴 동안 일당의 공격 턴 내에 적의 최대 HP의 99%까지 적에게 총 데미지를 줄 수 있다</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
@@ -82,7 +82,7 @@
 <div class="icon-line"><img src="img/common_special_bind.png">4턴 동안 일당 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_status_ico_damage_increase.png">6턴 동안 일당의 피격 데미지 3배</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ee0000; font-weight:bold;">[힘]</span><span style="color:#258325; font-weight:bold;">[기]</span><span style="color:#0329fd; font-weight:bold;">[속]</span><span style="color:#e79925; font-weight:bold;">[심]</span><span style="color:#7515A1; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 </body></html>
