--- a/PKA.html
+++ b/PKA.html
@@ -1,4 +1,5 @@
-<html><head><meta charset='UTF-8'>
+<html>
+<head><meta charset='UTF-8'>
 <style>
   body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
   h1 { font-size: 36px; color: gold; margin-bottom: 10px; border-bottom: 2px solid #f2f2f7; padding-bottom: 6px; }
@@ -8,11 +9,10 @@
 </style>
 </head>
 <body>
-<h1>궤적 패턴</h1>
+<iframe src="PKA_BOSS.html" width="100%" height="90%" style="border:none;"></iframe>
 <ul>
-<li><a href='PKA_BOSS.html' style='font-size:24px'>VS 링링</a></li>
-<li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 보아 행콕</a></li>
-<li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 보니</a></li>
+  <li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 보아 행콕</a></li><li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 보니</a></li>
 </ul>
 <footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-30</footer>
-</body></html>
+</body>
+</html>
