--- a/KIZUNA_SUPERBOSS2.html
+++ b/KIZUNA_SUPERBOSS2.html
@@ -29,7 +29,7 @@
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">1턴 동안 <span style="color:#ee0000; font-weight:bold;">[힘]</span><span style="color:#258325; font-weight:bold;">[기]</span><span style="color:#0329fd; font-weight:bold;">[속]</span><span style="color:#e79925; font-weight:bold;">[심]</span><span style="color:#7515A1; font-weight:bold;">[지]</span> 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">1턴 동안 [힘][기][속][심][지] 슬롯으로 공격했을 때 데미지 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_limit.png">1턴 동안 일당의 공격 턴 내에 적의 최대 HP의 99%까지 적에게 총 데미지를 줄 수 있다</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
@@ -41,7 +41,7 @@
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_icon_deffence_up.png">7턴 동안 방어력 10000000배</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">3개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 60% 감소</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">3개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 60% 감소</div>
 <div class="icon-line"><img src="img/common_slot_bind.png">3턴 동안 슬롯 봉쇄</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 2턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_icon_252_skill.png">9턴 동안 잠재 능력 무효</div>
@@ -82,7 +82,7 @@
 <div class="icon-line"><img src="img/common_special_bind.png">4턴 동안 일당 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_status_ico_damage_increase.png">6턴 동안 일당의 피격 데미지 3배</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ee0000; font-weight:bold;">[힘]</span><span style="color:#258325; font-weight:bold;">[기]</span><span style="color:#0329fd; font-weight:bold;">[속]</span><span style="color:#e79925; font-weight:bold;">[심]</span><span style="color:#7515A1; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 </body></html>
