--- a/PKA_BOSS.html
+++ b/PKA_BOSS.html
@@ -35,8 +35,8 @@
 <div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_bind.png">12턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">3개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">3개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
@@ -102,8 +102,8 @@
 <div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 15% 감소, 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 15% 감소, 공격력 90% 감소</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
