--- a/PKA_MID_BOSS1.html
+++ b/PKA_MID_BOSS1.html
@@ -24,13 +24,13 @@
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_reverse.png">상단, 하단의 필살기 턴을 2턴 되돌리기</div>
 <div class="icon-line"><img src="img/common_special_reverse.png">중간단의 필살기 턴을 4턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: Dr. 베가펑크</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
 <div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
@@ -57,7 +57,7 @@
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_special_bind.png">2턴 동안 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
 <br>
@@ -76,7 +76,7 @@
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_special_bind.png">3턴 동안 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
 <div class="icon-line"><img src="img/common_icon_deffence_up.png">3턴 동안 방어력 3000배</div>
@@ -93,13 +93,13 @@
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 2턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 <span style="color:#a0522d; font-weight:bold;">[고기]</span>[셈라]를 얻기 전까지 매 턴 남은 체력의 10% 감소, 공격력 99% 감소</div>
+<div class="icon-line"><img src="img/common_icon_hungry.png">1개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 10% 감소, 공격력 99% 감소</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: Dr. 베가펑크</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">99턴 동안 상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_special_bind.png">5턴 동안 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
 <div class="icon-line"><img src="img/common_icon_deffence_up.png">5턴 동안 방어력 50000배</div>
