--- a/KIZUNA_BOSS1.html
+++ b/KIZUNA_BOSS1.html
@@ -66,7 +66,7 @@
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
 <div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_skill.png">2턴 동안 슬롯 배리어(<span style="color:#258325; font-weight:bold;">[기]</span> 슬롯 3회)</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_skill.png">2턴 동안 슬롯 배리어([기] 슬롯 3회)</div>
 <div class="icon-line"><img src="img/common_icon_deffence_up.png">10턴 동안 방어력 100000배</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 모든 독</span><br>
 <div class="icon-line">1회까지</div>
@@ -85,7 +85,7 @@
 <div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
 <div class="icon-line"><img src="img/common_icon_restore_zero.png">10턴 동안 회복 무효</div>
 <div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_skill.png">3턴 동안 슬롯 배리어(<span style="color:#258325; font-weight:bold;">[기]</span> 슬롯 3회)</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_skill.png">3턴 동안 슬롯 배리어([기] 슬롯 3회)</div>
 <div class="icon-line"><img src="img/common_icon_deffence_up.png">10턴 동안 방어력 100000배</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 모든 독</span><br>
 <div class="icon-line">1회까지</div>
