--- a/TM_EB_full.html
+++ b/TM_EB_full.html
@@ -148,7 +148,7 @@
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
 <div class="icon-line"><img src="img/common_special_bind.png">2턴 동안 상단 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해][불리] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해][불리] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
 <br>
 </body></html>
@@ -182,7 +182,7 @@
 <br>
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
 <div class="icon-line"><img src="img/common_state_icon_attack_down.png">1턴 동안 공격력 50% 감소</div>
 <div class="icon-line"><img src="img/common_icon_burn.png">1턴 동안 3000 데미지의 화상</div>
