--- a/TM_NW_full.html
+++ b/TM_NW_full.html
@@ -152,8 +152,8 @@
 <div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
 <div class="icon-line"><img src="img/common_special_bind.png">5턴 동안 선원 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_special_bind.png">8턴 동안 상단 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해][불리] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_incidence_down_own.png">4턴 동안 <span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span> 슬롯을 [불리] 슬롯으로 취급</div>
+<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해][불리] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_incidence_down_own.png">4턴 동안 [힘][기][속][심][지] 슬롯을 [불리] 슬롯으로 취급</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
 <br>
 </body></html>
@@ -187,13 +187,13 @@
 <br>
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
 <div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_burn.png">1턴 동안 30000 데미지의 화상</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
-<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 <span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[和][연] 슬롯으로 공격했을 때 데미지 70% 감소</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [힘][기][속][심][지][和][연] 슬롯으로 공격했을 때 데미지 70% 감소</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">98턴 동안 지연 무효</div>
 <br>
 <h3>Stage 3:</h3>
@@ -246,7 +246,7 @@
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 3턴 되돌리기</div>
-<div class="icon-line"><img src="img/popuptext_slot_palsy.png">[공백]<span style="color:#ff4d4d; font-weight:bold;">[힘]</span><span style="color:#4dff4d; font-weight:bold;">[기]</span><span style="color:#4d9aff; font-weight:bold;">[속]</span><span style="color:#ffff4d; font-weight:bold;">[심]</span><span style="color:#d24dff; font-weight:bold;">[지]</span>[G]<span style="color:#a0522d; font-weight:bold;">[고기]</span>[연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_palsy.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [마비] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">98턴 동안 방어력 감소 무효</div>
 <div class="icon-line"><img src="img/common_bind.png">6턴 동안 중간단 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_burn.png">4턴 동안 20000 데미지의 화상</div>
