--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       <a href="TM.html">
         <img src="img/common_TM_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-07-16 18:00 ~ 2025-07-20 22:59<br>🔴 종료</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-07-16 18:00 ~<br>  2025-07-20 22:59<br>🔴 종료</div>
     </div>
     
     <div>
       <a href="PKA.html">
         <img src="img/common_PKA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-07-28 12:00 ~ 2025-08-26 22:59<br>🟢 개최중</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-07-28 12:00 ~<br>  2025-08-26 22:59<br>🟢 개최중</div>
     </div>
     
     <div>
       <a href="KIZUNA.html">
         <img src="img/common_KIZUNA_LOGO.png" style="height: 160px;">
       </a>
-      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-07-23 12:00 ~ 2025-07-27 22:59<br>🔴 종료</div>
+      <div style="font-size: 20px; color: white; margin-top: 6px;">2025-07-23 12:00 ~<br>  2025-07-27 22:59<br>🔴 종료</div>
     </div>
 
   </div>
