--- a/KIZUNA.html
+++ b/KIZUNA.html
@@ -8,6 +8,14 @@
 </style>
 </head>
 <body>
+
+<!-- ✅ 홈으로 버튼 -->
+<div style="text-align: right; margin-bottom: 1em;">
+  <a href="index.html" color: #000; padding: 8px 16px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+    Home
+  </a>
+</div>
+
 <h1>유대결전 패턴</h1>
 <ul>
 <li><a href='KIZUNA_BOSS1.html' style='font-size:22px'>[일반보스] [속] VS 미호크&페로나</a></li>
@@ -15,5 +23,5 @@
 <li><a href='KIZUNA_SUPERBOSS1.html' style='font-size:22px'>[초보스] [기] VS 미호크&페로나</a></li>
 <li><a href='KIZUNA_SUPERBOSS2.html' style='font-size:22px'>[초보스] [심] VS 미호크&페로나</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-30</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-31</footer>
 </body></html>
