--- a/PKA.html
+++ b/PKA.html
@@ -9,10 +9,18 @@
 </style>
 </head>
 <body>
+
+<!-- ✅ 홈으로 버튼 -->
+<div style="text-align: right; margin-bottom: 1em;">
+  <a href="index.html" color: #000; padding: 8px 16px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+    Home
+  </a>
+</div>
+
 <iframe src="PKA_BOSS.html" width="100%" height="90%" style="border:none;"></iframe>
 <ul>
   <li><a href='PKA_MID_BOSS2.html' style='font-size:24px'>VS 보아 행콕</a></li><li><a href='PKA_MID_BOSS1.html' style='font-size:24px'>VS 보니</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-30</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-31</footer>
 </body>
 </html>
