--- a/TM.html
+++ b/TM.html
@@ -10,11 +10,19 @@
 </style>
 </head>
 <body>
+
+<!-- ✅ 홈으로 버튼 -->
+<div style="text-align: right; margin-bottom: 1em;">
+  <a href="index.html" color: #000; padding: 8px 16px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+    Home
+  </a>
+</div>
+
 <iframe src="TM_NW_full.html" width="100%" height="90%" style="border:none;"></iframe>
 <ul>
   <li><a href="TM_GL_full.html">위대한 항로</a></li>
   <li><a href="TM_EB_full.html">통통배</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-30</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-07-31</footer>
 </body>
 </html>
