--- a/TM_NW_full.html
+++ b/TM_NW_full.html
@@ -39,7 +39,7 @@
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
 <div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
-<div class="icon-line">1턴 동안 슬롯 배리어([무지개] 슬롯 2회)</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_rainbow.png">1턴 동안 슬롯 배리어([무지개] 슬롯 2회)</div>
 <br>
 </body></html>
 <hr><h2><span style='color:#4d9aff'>[속] VS 알비다&코비</span></h2>
