--- a/KIZUNA_SUPERBOSS1.html
+++ b/KIZUNA_SUPERBOSS1.html
@@ -18,7 +18,7 @@
 </head>
 <body>
        <h1>VS 미호크&페로나</h1>
-       <div style="font-size: 22px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#258325; font-weight:bold;">초보스</span> <span style="color:#258325; font-weight:bold;">[기]</span></div>
+       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#258325; font-weight:bold;">초보스</span> <span style="color:#258325; font-weight:bold;">[기]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 심 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
@@ -32,7 +32,7 @@
 <div class="icon-line"><img src="img/common_silence.png">5턴 동안 우측 하단 침묵</div>
 <div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">7턴 동안 받는 데미지를 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
@@ -62,7 +62,7 @@
 <div class="icon-line"><img src="img/common_icon_251_skill.png">2턴 동안 15656 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <div class="icon-line"><img src="img/common_icon_chain_down.png">3턴 동안 체인 계수 증가량 0.1배</div>
 <div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 3.5 이하일 경우 공격력 90% 감소</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
