--- a/KIZUNA_SUPERBOSS2.html
+++ b/KIZUNA_SUPERBOSS2.html
@@ -18,7 +18,7 @@
 </head>
 <body>
        <h1>VS 미호크&페로나</h1>
-       <div style="font-size: 22px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#e79925; font-weight:bold;">초보스</span> <span style="color:#e79925; font-weight:bold;">[심]</span></div>
+       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#e79925; font-weight:bold;">초보스</span> <span style="color:#e79925; font-weight:bold;">[심]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_special_charge.png">참격형, 타격형, 강인형 캐릭터의 필살기 턴을 30턴 단축</div>
@@ -31,7 +31,7 @@
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_icon_247_skill.png">1턴 동안 [힘][기][속][심][지] 슬롯으로 공격했을 때 데미지 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_damage_limit.png">1턴 동안 일당의 공격 턴 내에 적의 최대 HP의 99%까지 적에게 총 데미지를 줄 수 있다</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
@@ -62,7 +62,7 @@
 <div class="icon-line"><img src="img/common_icon_230_skill.png">2턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 슬롯 영향 증폭, 기본 공격력 상승)</div>
 <div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
 <div class="icon-line"><img src="img/common_special_reverse.png">일당의 필살기 턴을 2턴 되돌리기</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">횟수 무제한</div>
 <div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
