--- a/KIZUNA_BOSS1.html
+++ b/KIZUNA_BOSS1.html
@@ -17,78 +17,107 @@
 </style>
 </head>
 <body>
-       <h1>VS 미호크&페로나</h1>
-       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#0329fd; font-weight:bold;">일반보스</span> <span style="color:#0329fd; font-weight:bold;">[속]</span></div>
+       <h1>VS 볼사리노</h1>
+       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#258325; font-weight:bold;">일반보스</span> <span style="color:#258325; font-weight:bold;">[기]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">타격형, 야심형, 박식형 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">타격형, 야심형, 박식형 캐릭터의 슈퍼 체인지 효과를 15 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">타격형, 야심형, 박식형 캐릭터의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 기 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 기 속성, 지 속성 속성의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 기 속성, 지 속성 속성의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 센토마루</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지 이외의 상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_burn.png">5턴 동안 6700 데미지의 화상</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">6턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/common_icon_heal_to_damage.png">4턴 동안[고기][셈라] 슬롯 이외의 회복 효과를 데미지로 변환</div>
+<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태일 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line">일당의 체력을 80000 회복</div>
 <span class="label-death">격파 시 행동:</span><br>
-<div class="icon-line"><img src="img/common_heal.png">자신의 체력을 100%까지 회복</div>
-<div class="icon-line"><img src="img/common_damage.png">남은 체력의 70% 비율 데미지</div>
-<div class="icon-line"><img src="img/common_run.png">도주</div>
+<div class="icon-line"><img src="img/common_damage.png">30000 데미지</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv1~Lv20의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 미호크&페로나</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 볼사리노</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_235_skill.png">4턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 20000을(를) 받는다</div>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_negative.png">선원의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [불리] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [기][속][심][지][和][연][무지개] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 선원을 마비</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">7턴 동안 방어력 100000배</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 모든 독</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_damage.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 적의 데미지 무효 해제</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">6턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv21~Lv30의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 미호크&페로나</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 볼사리노</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_235_skill.png">4턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 20000을(를) 받는다</div>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_2.png">3턴 동안 탭 타이밍 배리어(GREAT 2회)</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">선원의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [독] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [기][속][심][지][和][연][무지개] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 선원을 마비</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_skill.png">2턴 동안 슬롯 배리어([기] 슬롯 3회)</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">10턴 동안 방어력 100000배</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 모든 독</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_damage.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 적의 데미지 무효 해제</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">6턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv31~의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 미호크&페로나</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 볼사리노</span><br>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_235_skill.png">4턴 동안 일반 탭 이외의 조작을 하면 해당 행동 후에 데미지 20000을(를) 받는다</div>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_attack_up_01_icon.png">98턴 동안 일당의 공격력을 1.1배</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_2.png">3턴 동안 탭 타이밍 배리어(GREAT 2회)</div>
+<div class="icon-line"><img src="img/common_icon_damage_limit.png">3턴 동안 일당의 공격 턴 내에 적의 최대 HP의 70%까지 적에게 총 데미지를 줄 수 있다</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">상단의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">선원의 [공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [독] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_icon_247_skill.png">3턴 동안 [기][속][심][지][和][연][무지개] 슬롯으로 공격했을 때 데미지 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 선원을 마비</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
-<div class="icon-line"><img src="img/common_icon_restore_zero.png">10턴 동안 회복 무효</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_skill.png">3턴 동안 슬롯 배리어([기] 슬롯 3회)</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">10턴 동안 방어력 100000배</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 모든 독</span><br>
-<div class="icon-line">1회까지</div>
-<div class="icon-line"><img src="img/common_damage.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 적의 데미지 무효 해제</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_territory.png">3턴 동안 장소를 ‘구역: 적’(으)로 만든다</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">6턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line">일당의 체력을 80000 회복</div>
 <br>
 </body></html>
