--- a/KIZUNA_SUPERBOSS2.html
+++ b/KIZUNA_SUPERBOSS2.html
@@ -68,11 +68,11 @@
 <div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
 <div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 적이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 적이 데미지 감소 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">1회까지</div>
 <div class="icon-line"><img src="img/common_palsy.png">7턴 동안 일당을 마비</div>
 <div class="icon-line"><img src="img/common_icon_chain_damagedown.png">3턴 동안 체인 계수가 3.0 이하일 경우 공격력 90% 감소</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 적이  상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 적이 데미지 격감 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">1회까지</div>
 <div class="icon-line"><img src="img/common_state_icon_attack_down.png">7턴 동안 공격력 90% 감소</div>
 <div class="icon-line"><img src="img/common_icon_chain_down.png">3턴 동안 체인 계수 증가량 0.1배</div>
