--- a/KIZUNA_BOSS1.html
+++ b/KIZUNA_BOSS1.html
@@ -34,9 +34,9 @@
 <div class="icon-line"><img src="img/common_icon_heal_to_damage.png">4턴 동안[고기][셈라] 슬롯 이외의 회복 효과를 데미지로 변환</div>
 <div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
 <div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
-<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이  상태일 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 회복 효과를 데미지로 변환 상태일 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
 <div class="icon-line">1회까지</div>
-<div class="icon-line">일당의 체력을 80000 회복</div>
+<div class="icon-line"><img src="img/common_heal.png">일당의 체력을 80000 회복</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_damage.png">30000 데미지</div>
 <br>
@@ -118,6 +118,6 @@
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_icon_251_skill.png">6턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<div class="icon-line">일당의 체력을 80000 회복</div>
+<div class="icon-line"><img src="img/common_heal.png">일당의 체력을 80000 회복</div>
 <br>
 </body></html>
