--- a/KIZUNA_BOSS2.html
+++ b/KIZUNA_BOSS2.html
@@ -51,11 +51,11 @@
 <div class="icon-line"><img src="img/common_icon_251_skill.png">7턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
 <div class="icon-line">1회까지</div>
-<div class="icon-line">4턴 동안 탭 횟수 제한 4회</div>
+<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">4턴 동안 탭 횟수 제한 4회</div>
 <div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 선원의 슬롯 봉쇄</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원, 좌측 상단 봉쇄</div>
-<div class="icon-line">고정 회복 1000000</div>
+<div class="icon-line"><img src="img/common_heal.png">고정 회복 1000000</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 선원 필살기 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
@@ -78,11 +78,11 @@
 <div class="icon-line"><img src="img/common_icon_251_skill.png">12턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
 <div class="icon-line">1회까지</div>
-<div class="icon-line">4턴 동안 탭 횟수 제한 4회</div>
+<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">4턴 동안 탭 횟수 제한 4회</div>
 <div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 선원의 슬롯 봉쇄</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원, 좌측 상단 봉쇄</div>
-<div class="icon-line">고정 회복 1000000</div>
+<div class="icon-line"><img src="img/common_heal.png">고정 회복 1000000</div>
 <div class="icon-line">배리어 해제</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 선원 필살기 봉쇄</div>
@@ -107,11 +107,11 @@
 <div class="icon-line"><img src="img/common_icon_251_skill.png">12턴 동안 20000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <span class="label-special" style="color:#87cefa">특수 끼어들기: 체인 계수 상한 고정</span><br>
 <div class="icon-line">1회까지</div>
-<div class="icon-line">4턴 동안 탭 횟수 제한 4회</div>
+<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">4턴 동안 탭 횟수 제한 4회</div>
 <div class="icon-line"><img src="img/common_slot_bind.png">2턴 동안 선원의 슬롯 봉쇄</div>
 <span class="label-death">격파 시 행동:</span><br>
 <div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원, 좌측 상단 봉쇄</div>
-<div class="icon-line">고정 회복 1000000</div>
+<div class="icon-line"><img src="img/common_heal.png">고정 회복 1000000</div>
 <div class="icon-line">배리어 해제</div>
 <span class="label-interrupt" style="color:#87cefa">끼어들기: 1턴 경과 후</span><br>
 <div class="icon-line"><img src="img/common_special_bind.png">6턴 동안 선원 필살기 봉쇄</div>
